--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,18 +3,20 @@
     <item
         android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"
-        android:title="@string/home"
-        android:orderInCategory="1" />
-
+        android:title="@string/home" />
+    
     <item
         android:id="@+id/mapFragment"
         android:icon="@drawable/ic_map"
-        android:title="@string/map"
-        android:orderInCategory="2" />
-
+        android:title="@string/map" />
+    
     <item
         android:id="@+id/profileFragment"
         android:icon="@drawable/ic_profile"
-        android:title="@string/profile"
-        android:orderInCategory="3" />
+        android:title="@string/profile" />
+    
+    <item
+        android:id="@+id/settingsFragment"
+        android:icon="@drawable/ic_settings"
+        android:title="@string/settings" />
 </menu>
