--- a/app/src/main/res/drawable/bg_distance_badge.xml
+++ b/app/src/main/res/drawable/bg_distance_badge.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#80000000" />
-    <corners android:radius="16dp" />
+    <solid android:color="@color/semi_transparent_black" />
+    <corners android:radius="@dimen/corner_xlarge" />
     <padding
-        android:bottom="4dp"
-        android:left="8dp"
-        android:right="8dp"
-        android:top="4dp" />
+        android:bottom="@dimen/spacing_small"
+        android:left="@dimen/spacing_medium"
+        android:right="@dimen/spacing_medium"
+        android:top="@dimen/spacing_small" />
 </shape>
