--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- App Theme Colors -->
+    <!-- Text colors -->
+    <color name="text_primary">#212121</color>
+    <color name="text_secondary">#757575</color>
+    
+    <!-- Brand colors -->
     <color name="primary">#FF6200EE</color>
     <color name="primary_dark">#FF3700B3</color>
     <color name="secondary">#FF03DAC5</color>
     <color name="secondary_dark">#FF018786</color>
-    <color name="background">#FFFFFFFF</color>
-    <color name="surface">#FFFFFFFF</color>
-    <color name="error">#FFB00020</color>
-    <color name="text_primary">#DE000000</color>
-    <color name="text_secondary">#99000000</color>
+    
+    <!-- Status colors -->
     <color name="warning">#FFA000</color>
+    <color name="error">#B00020</color>
+    <color name="success">#4CAF50</color>
+    
+    <!-- Background colors -->
+    <color name="background">#FFFFFF</color>
+    <color name="surface">#FFFFFF</color>
+    
+    <!-- Chip colors -->
+    <color name="chip_background_color">#F5F5F5</color>
+    <color name="chip_text_color">@color/text_primary</color>
+    <color name="chip_stroke_color">@color/primary</color>
+    
+    <!-- Gray colors -->
+    <color name="gray_300">#E0E0E0</color>
+    <color name="gray_400">#BDBDBD</color>
+    <color name="gray_500">#9E9E9E</color>
+    
+    <!-- Utility colors -->
+    <color name="scrim">#52000000</color>
+    <color name="semi_transparent_black">#80000000</color>
 
-    <!-- Standard Colors -->
+    <!-- Default Android colors -->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -20,17 +41,4 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
-    <!-- Gray Scale -->
-    <color name="gray_100">#FFF5F5F5</color>
-    <color name="gray_200">#FFEEEEEE</color>
-    <color name="gray_300">#FFE0E0E0</color>
-    <color name="gray_400">#FFBDBDBD</color>
-    <color name="gray_500">#FF9E9E9E</color>
-
-    <!-- Launcher Icon -->
-    <color name="ic_launcher_background">#FFFFFF</color>
-
-    <!-- Scrim -->
-    <color name="scrim">#52000000</color>
 </resources>
