--- a/app/src/main/res/drawable/bg_distance_badge.xml
+++ b/app/src/main/res/drawable/bg_distance_badge.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/semi_transparent_black" />
-    <corners android:radius="@dimen/corner_xlarge" />
+    <corners android:radius="@dimen/chip_corner_radius" />
     <padding
-        android:bottom="@dimen/spacing_small"
-        android:left="@dimen/spacing_medium"
-        android:right="@dimen/spacing_medium"
-        android:top="@dimen/spacing_small" />
+        android:bottom="@dimen/chip_padding_vertical"
+        android:left="@dimen/chip_padding_horizontal"
+        android:right="@dimen/chip_padding_horizontal"
+        android:top="@dimen/chip_padding_vertical" />
 </shape>
